--- a/study.html
+++ b/study.html
@@ -11,7 +11,7 @@
 </head>
 <body id="page-study">
 
-    <div id="container aa">
+    <div id="container">
         <header class="page-header">
             <div class="top-bar-container">
                 <a href="/">
